Solved Routing error
Solved a routing problem where you couldn't go to favorites from Home, fixed the No Favorites yet not showing problem

--- a/my-vue-app/src/CSS/Favourite.css
+++ b/my-vue-app/src/CSS/Favourite.css
@@ -13,6 +13,7 @@
   background-position: center;
   background-attachment: fixed;
   margin-bottom: 200px;
+  margin-top: 0px;
 }
 
 .favorites-list {
